# WaveX

./: .clang-format  .gitignore  .gitmodules  .graphifyignore  .graphifyignore.submodules  .pre-commit-config.yaml  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  build.sh  flash-esp32.sh  monitor-esp32.sh  setup.md
firmware/daisy/: BUILD_AND_FLASH.md  CMakeLists.txt  Makefile  README.md
firmware/daisy/src/: config.hpp  cv_bus.hpp  main.cpp  main_hal_spi_test.cpp  memory.h  sampler.hpp  timebase.hpp
firmware/daisy/src/audio/: audio_adapter.cpp  audio_adapter.h  audio_engine.cpp  audio_engine.h  envelope.hpp  one_pole_filter.hpp  output_sink.hpp  voice_manager.hpp
firmware/daisy/src/comm/: daisy_filesystem.cpp  daisy_filesystem.h  daisy_inter_mcu_message_handlers.cpp  daisy_inter_mcu_message_handlers.h  daisy_logging.cpp  daisy_spi_filesystem.cpp  daisy_spi_filesystem.h  daisy_spi_link.cpp  daisy_spi_link.h  daisy_spi_message_handlers.cpp  daisy_spi_message_handlers.h  daisy_uart_link.cpp  daisy_uart_link.h  inter_spi.cpp  inter_spi.h  inter_spi_hal.cpp  inter_spi_hal.h  inter_uart.cpp  inter_uart.h  message_router.cpp  message_router.h  spi_hal_interrupts.cpp
firmware/daisy/src/cv/: cv_cal.hpp  cv_group_router.hpp  mcp4728_backend.hpp  mcp48_backend.hpp
firmware/daisy/src/metrics/: metrics.cpp  metrics.h
firmware/daisy/src/profiling/: profiler.cpp  profiler.h
firmware/daisy/src/storage/: diskio_sd_spi.cpp  fs_browse.cpp  fs_browse.h  sd_log_bridge.cpp  sd_sdio.cpp  sd_sdio.h  sd_spi.cpp  sd_spi.h
firmware/daisy/tests/: CMakeLists.txt
firmware/daisy/tests/Testing/Temporary/: CTestCostData.txt
firmware/daisy/tests/mocks/: daisy_mocks.h  daisy_seed.h  fatfs_mock.cpp  fatfs_mock.h  ff.h
firmware/daisy/tests/unit/audio/: audio_engine_test.cpp  output_sink_test.cpp  sampler_test.cpp  voice_manager_test.cpp
firmware/daisy/tests/unit/comm/: daisy_uart_link_test.cpp
firmware/daisy/tests/unit/cv/: cv_group_router_test.cpp
firmware/daisy/tests/unit/metrics/: metrics_test.cpp
firmware/daisy/tests/unit/storage/: fs_browse_test.cpp
firmware/daisy/tests/utils/: test_helpers.cpp  test_helpers.h
firmware/esp32/components/lvgl_esp32/: CMakeLists.txt  lv_conf.h
firmware/esp32/components/ui/: CMakeLists.txt  ui_globals.cpp
firmware/esp32/components/ui/common/: window_manager.cpp  window_manager.h
firmware/esp32/components/ui/components/: file_browser.cpp  file_browser.h  waveform_view.cpp  waveform_view.h
firmware/esp32/components/ui/include/ui/: display_manager.h  input_dispatcher.h  input_event.h  tca8418_keypad.h  ui_api.h  ui_context.h  ui_demo.h  ui_diagnostics_page.h  ui_existing_pages.h  ui_file_browser.h  ui_globals.h  ui_main_menu.h  ui_menu_item.h  ui_menu_page.h  ui_navigation_integration.h  ui_navigator.h  ui_page.h  ui_sample_browser.h  ui_sample_detail.h  ui_sample_edit_page.h  ui_sample_memory_page.h  ui_sample_record_page.h  ui_settings_page.h  ui_softkey.h  ui_softkey_bar.h  waveform_view.h
firmware/esp32/components/ui/pages/: diagnostics_page.cpp  diagnostics_page.h  sample_load_save.cpp  sample_load_save.h  ui_sample_edit_page.cpp  ui_sample_record_page.cpp
firmware/esp32/components/ui/src/: display_manager.cpp  input_dispatcher.cpp  tca8418_keypad.cpp  ui_api.cpp  ui_diagnostics_page.cpp  ui_existing_pages.cpp  ui_file_browser.cpp  ui_main.cpp  ui_main_menu.cpp  ui_menu_page.cpp  ui_navigation_demo.cpp  ui_navigation_integration.cpp  ui_navigator.cpp  ui_param_edit.cpp  ui_patch_list.cpp  ui_sample_browser.cpp  ui_sample_detail.cpp  ui_sample_memory_page.cpp  ui_settings_page.cpp  ui_softkey_bar.cpp
firmware/esp32/components/ui/styles/: ui_theme.cpp  ui_theme.h
firmware/esp32/components/ui_lgfx/: CMakeLists.txt  Kconfig.projbuild
firmware/esp32/components/ui_lgfx/include/ui_lgfx/: input.h  lgfx_device.h  screen.h  (+5 more)
firmware/esp32/components/ui_lgfx/src/: lgfx_device.cpp  screens_display.cpp  screens_main.cpp  screensaver.cpp  ui_manager.cpp  ui_task.cpp
firmware/esp32/main/: CMakeLists.txt  CMakeLists_refactored.txt  README_REFACTORING.md  application_context.cpp  application_context.h  config.h  idf_component.yml  inter_mcu.cpp  inter_mcu.h  main.cpp  midi_task.cpp  midi_task.h  pcnt_task.cpp  pcnt_task.h  ui_about.cpp  ui_about.h  ui_main.cpp  ui_main.h  ui_task.c  ui_task.cpp  ui_task.h  usb_midi_task.cpp  usb_midi_task.h  version.h  wavex_application.cpp  wavex_application.h
firmware/esp32/main/comm/: comm_interface_impl.cpp  comm_interface_impl.h  i_comm_interface.h  link_manager.cpp  link_manager.h  listeners.cpp  listeners.h  packet_processor.cpp  packet_processor.h  packet_router.cpp  packet_router.h  shared_packet_handler.cpp  shared_packet_handler.h  statistics.cpp  statistics.h
firmware/esp32/main/links/: esp_spi_link.cpp  esp_spi_link.h  esp_uart_link.cpp  esp_uart_link.h  spi_link.cpp  spi_link.h  spi_link_slave_hd.cpp  spi_link_wrapper.h  uart_link.cpp  uart_link.h
firmware/esp32/main/tasks/: rx_task.cpp  rx_task.h  tx_task.cpp  tx_task.h
firmware/esp32/tests/: CMakeLists.txt
firmware/esp32/tests/integration/: inter_mcu_protocol_test.cpp
firmware/esp32/tests/mocks/: esp32_mocks.cpp  esp32_mocks.h  esp_err.h  esp_lcd_types.h  esp_log.h  esp_lvgl_port.h  esp_timer.h  inter_mcu_mocks.cpp  lvgl.h  mock_application_context.h  ui_mocks.cpp  ui_theme.h
firmware/esp32/tests/mocks/freertos/: FreeRTOS.h  portmacro.h  queue.h  task.h
firmware/esp32/tests/unit/: application_context_test.cpp  wavex_application_test.cpp  wavex_application_test.cpp.disabled
firmware/esp32/tests/unit/comm/: comm_interface_impl_test.cpp  packet_router_test.cpp  statistics_test.cpp
firmware/esp32/tests/unit/ui/: file_browser_test.cpp
firmware/esp32/tests/utils/: test_helpers.cpp  test_helpers.h
firmware/shared/tests/: CMakeLists.txt
firmware/shared/tests/midi/: midi_stream_parser_test.cpp
firmware/shared/tests/protocol/: attn_watchdog_test.cpp  message_types_test.cpp  sequence_tracker_test.cpp  uart_protocol_test.cpp
firmware/shared/tests/utils/: test_helpers.cpp  test_helpers.h
(+312 files in other folders)
