idf_component_register(
    SRCS
        "main.cpp"
        "application_context.cpp"
        "wavex_application.cpp"
        "inter_mcu.cpp"
        "ui_task.cpp"
        "pcnt_task.cpp"
        "midi_task.cpp"
        "comm/packet_router.cpp"
        "comm/statistics.cpp"
        "comm/comm_interface_impl.cpp"
        "links/esp_spi_link.cpp"
        "links/esp_uart_link.cpp"
    INCLUDE_DIRS
        "."
        "comm"
        "links"
        "../../shared/spi_protocol"
        "../../shared/uart_protocol"
        "../../shared/config"
        "../../shared"
    REQUIRES
        "driver"
        "freertos"
        "esp_timer"
        "esp_common"
        "esp_driver_gpio"
        "esp_driver_spi"
        "esp_driver_i2c"
        "esp_lcd"
        "esp_lvgl_port"
        "esp_lcd_touch"
        "esp_lcd_touch_gt911"
        "esp_mm"
    PRIV_REQUIRES
        "shared"
        "ui"
)
